# jcs-bench-lab

./: .gitignore  .gitmodules  ARTIFACT.md  README.md  REVIEW-FIXES.md  go.mod
impl-dragonbox/: go.mod
impl-dragonbox-rs/: Cargo.toml
impl-dragonbox-rs/src/: jcs.rs  jcsfloat.rs  lib.rs
impl-dragonbox-rs/testdata/: golden_vectors.csv
impl-dragonbox-rs/tests/: golden_vectors.rs
impl-ryu/: go.mod
impl-ryu-rs/: Cargo.toml
paper/: Makefile  cover-letter.tex  highlights.tex  main.bbl  main.tex  references.bib  supplementary.tex
results/: api-bench-20260305T052658Z.txt  api-bench-20260305T053526Z.txt  api-bench-20260305T055756Z.txt  api-bench-20260305T061001Z.txt  api-bench-20260305T151723Z.txt  api-bench-20260305T190325Z.txt  api-bench-20260305T205040Z.txt  api-bench-20260305T205427Z.txt  api-bench-20260305T205813Z.txt  api-bench-20260305T205828Z.txt  api-bench-20260305T222617Z.txt  api-bench-20260305T225045Z.txt  api-bench-20260306T012751Z.txt  api-bench-20260306T022700Z.txt  api-bench-20260306T025351Z.txt  api-bench-20260306T035140Z.txt  api-bench-20260306T053306Z.txt  api-bench-20260306T062957Z.txt  api-bench-20260306T074218Z.txt  api-bench-combined-20260306.txt  api-prof-json-canon-20260305T053432Z.txt  api-prof-json-canon-20260305T060124Z.txt  api-prof-json-canon-20260305T061332Z.txt  api-prof-json-canon-20260305T153736Z.txt  api-prof-json-canon-20260305T192842Z.txt  api-prof-json-canon-cpu-20260305T053432Z.pprof  api-prof-json-canon-cpu-20260305T060124Z.pprof  api-prof-json-canon-cpu-20260305T153736Z.pprof  api-prof-json-canon-cpu-20260305T163933Z.pprof  (+251 more)
(+112 files in other folders)
