[package]
name = "jcs-dragonbox-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "jcs_dragonbox_rs"
path = "src/lib.rs"

[[bin]]
name = "jcs-canon"
path = "src/bin/jcs_canon.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]

[dev-dependencies]
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
